--- a/src/components/input/Search.css
+++ b/src/components/input/Search.css
@@ -1,14 +1,15 @@
 .input-wrapper {
   display: flex;
   justify-content: center;
-  padding: 20px;
+  padding: 20px 0px;
   margin-top: 40px;
+  width: 50vmax;
+  margin: auto;
+
 }
 
 input {
-  width: 522px;
   height: 48px;
-  margin: auto;
   font-size: inherit;
   padding: 0 58px 0 28px;
   border-radius: 30px;
@@ -20,7 +21,7 @@ input {
 }
 
 .clear {
-  background-color: red;
+  background-color: rgb(68, 89, 229);
   border:1px solid ;
   margin-left: 5px;
   height: 50px;
